# pg_eviltransform

./: .dockerignore  .gitignore  Cargo.toml  README.md  README.zh-CN.md  benchmark_pg18_report.txt  benchmark_pg19_report.txt  build.rs  pg_eviltransform--0.0.2--0.0.3.sql  pg_eviltransform--0.0.3--0.0.4.sql  pg_eviltransform.control  regex_eviltransform.sql
.github/workflows/: ci.yml  release-packages.yml
docker/: Dockerfile.benchmark-trixie  Dockerfile.release-trixie
scripts/: CDB_JenksBins.sql  benchmark_jenksbins.sh  benchmark_pg18.sh  package_debs.sh  package_rpms.sh  release_debian_trixie.sh
src/: coord.rs  ewkb.rs  jenks.rs  lib.rs  rtgeom_fast.c
